Bug 409614 - IDN with non-ASCII TLD is displayed in Punycode. r+sr=biesi, a=damons